--- a/common/templates/base.html
+++ b/common/templates/base.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>FaceClone</title>
+  <title>Interactify | {%block title%}{% endblock %}</title>
 
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+{% load static %}
+
+  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css'%}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
 <body>
   <!-- nav -->
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="index.html">FaceClone</a>
+        <a class="navbar-brand" href="index.html">Interactify</a>
       </div>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="home.html">Home</a></li>
@@ -23,19 +25,19 @@
   <!-- ./nav -->
 
   <!-- main -->
-  <main class="container">
-
-  </main>
+ {% block body %}
+  {% endblock %}
   <!-- ./main -->
 
   <!-- footer -->
   <footer class="container text-center">
     <ul class="nav nav-pills pull-right">
-      <li>FaceClone - Made by [your name here]</li>
+      <li>Interactify - Made by Hitesh Dureja</li>
     </ul>
   </footer>
   <!-- ./footer -->
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/script.js"></script>
+  <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
+{% block js %}{% endblock %}
 </body>
 </html>
