--- a/news_feed/templates/news_feed.html
+++ b/news_feed/templates/news_feed.html
@@ -1,27 +1,33 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>FaceClone</title>
+{#<!DOCTYPE html>#}
+{#<html>#}
+{#<head>#}
+{#  <title>FaceClone</title>#}
 
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-<body>
-  <!-- nav -->
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="index.html">FaceClone</a>
-      </div>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="profile.html">Profile</a></li>
-        <li><a href="#">Logout</a></li>
-      </ul>
-    </div>
-  </nav>
+{% extends "base.html" %}
+{% block title %}
+    News Feed
+{% endblock title %}
+
+{##}
+{#  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">#}
+{#  <link rel="stylesheet" type="text/css" href="css/style.css">#}
+{#</head>#}
+{#<body>#}
+{#  <!-- nav -->#}
+{#  <nav class="navbar navbar-default">#}
+{#    <div class="container-fluid">#}
+{#      <div class="navbar-header">#}
+{#        <a class="navbar-brand" href="index.html">FaceClone</a>#}
+{#      </div>#}
+{#      <ul class="nav navbar-nav navbar-right">#}
+{#        <li><a href="home.html">Home</a></li>#}
+{#        <li><a href="profile.html">Profile</a></li>#}
+{#        <li><a href="#">Logout</a></li>#}
+{#      </ul>#}
+{#    </div>#}
+{#  </nav>#}
   <!-- ./nav -->
-
+{% block body %}
   <!-- main -->
   <main class="container">
     <div class="row">
@@ -52,10 +58,12 @@
       </div>
       <div class="col-md-6">
         <!-- post form -->
-        <form method="post" action="">
+        <form method="post" action="/feed/">
+          {% csrf_token %}
           <div class="input-group">
-            <input class="form-control" type="text" name="content" placeholder="Make a post...">
-            <span class="input-group-btn">
+              <input class="user_id" type="text" name="user_id" placeholder="Enter user id...">
+              <input class="form-control" type="text" name="feed_text" placeholder="Make a post...">
+              <span class="input-group-btn">
               <button class="btn btn-success" type="submit" name="post">Post</button>
             </span>
           </div>
@@ -65,15 +73,17 @@
         <!-- feed -->
         <div>
           <!-- post -->
+            {% for post in feed %}
           <div class="panel panel-default">
             <div class="panel-body">
-              <p>Hello people! This is my first FaceClone post. Hurray!!!</p>
+              <p>{{ post.feed_text }}</p>
             </div>
             <div class="panel-footer">
-              <span>posted 2017-5-27 20:45:01 by nicholaskajoh</span>
+              <span>posted {{ post.created_at }} by {{ post.user_id }}</span>
               <span class="pull-right"><a class="text-danger" href="#">[delete]</a></span>
             </div>
           </div>
+            {% endfor %}
           <!-- ./post -->
         </div>
         <!-- ./feed -->
@@ -110,15 +120,15 @@
     </div>
   </main>
   <!-- ./main -->
-
-  <!-- footer -->
-  <footer class="container text-center">
-    <ul class="nav nav-pills pull-right">
-      <li>FaceClone - Made by [your name here]</li>
-    </ul>
-  </footer>
-  <!-- ./footer -->
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/script.js"></script>
-</body>
-</html>
+{% endblock %}
+{#  <!-- footer -->#}
+{#  <footer class="container text-center">#}
+{#    <ul class="nav nav-pills pull-right">#}
+{#      <li>FaceClone - Made by [your name here]</li>#}
+{#    </ul>#}
+{#  </footer>#}
+{#  <!-- ./footer -->#}
+{#  <script type="text/javascript" src="js/bootstrap.min.js"></script>#}
+{#  <script type="text/javascript" src="js/script.js"></script>#}
+{#</body>#}
+{#</html>#}
