--- a/account/templates/otp_verification.html
+++ b/account/templates/otp_verification.html
@@ -6,8 +6,26 @@
 {% endblock title %}
 <!-- This page should be able to use common static (css & JS) files -->
 {#<body>#}
+{% block navlinks %}
+    {% if user_logged_in %}
+        {{ block.super }}
+    {% endif %}
+{% endblock %}
  {% block body %}
-     <h1>This is heading from otp_verification.html</h1>
+     <div class="col-md-4">
+     </div>
+     <div class="col-md-4" style="">
+         <form id="otp_verification" method="post" action="/otp/verify">
+                {% csrf_token %}
+              <div class="form-group">
+                  <label  for="OTP">Enter OTP: </label><br>
+                <input class="form-control" type="text" id="otp" name="otp" ><br>
+              </div>
+              <div class="form-group">
+                <input class="btn btn-primary" type="submit"  value="Enter">
+              </div>
+         </form>
+     </div>
+     <div class="col-md-4" style="height: 200px">
+     </div>
   {% endblock %}
-{#</body>#}
-{#</html>#}
