finalize chat app

--- a/chat/templates/one_on_one_chat.html
+++ b/chat/templates/one_on_one_chat.html
@@ -6,8 +6,7 @@
     <p id="chat-history"></p>
     <form id="send-message" method="post">
         {% csrf_token %}
-        <label for="userId">User Id: </label><br>
-        <input type="text" id="user_id" name="user_id"><br>
+        <input type="hidden" id="user_id" name="user_id" value= {{ user_id }} ><br>
         <label for="msglable">Message</label><br>
         <input type="text" id="message" name="message"><br>
         <input type="submit" value="Send">
