--- a/news_feed/templates/news_feed.html
+++ b/news_feed/templates/news_feed.html
@@ -1,31 +1,7 @@
-{#<!DOCTYPE html>#}
-{#<html>#}
-{#<head>#}
-{#  <title>FaceClone</title>#}
-
 {% extends "base.html" %}
 {% block title %}
     News Feed
 {% endblock title %}
-
-{##}
-{#  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">#}
-{#  <link rel="stylesheet" type="text/css" href="css/style.css">#}
-{#</head>#}
-{#<body>#}
-{#  <!-- nav -->#}
-{#  <nav class="navbar navbar-default">#}
-{#    <div class="container-fluid">#}
-{#      <div class="navbar-header">#}
-{#        <a class="navbar-brand" href="index.html">FaceClone</a>#}
-{#      </div>#}
-{#      <ul class="nav navbar-nav navbar-right">#}
-{#        <li><a href="home.html">Home</a></li>#}
-{#        <li><a href="profile.html">Profile</a></li>#}
-{#        <li><a href="#">Logout</a></li>#}
-{#      </ul>#}
-{#    </div>#}
-{#  </nav>#}
   <!-- ./nav -->
 {% block body %}
   <!-- main -->
@@ -41,27 +17,14 @@
         </div>
         <!-- ./profile brief -->
 
-        <!-- friend requests -->
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <h4>friend requests</h4>
-            <ul>
-              <li>
-                <a href="#">johndoe</a>
-                <a class="text-success" href="#">[accept]</a>
-                <a class="text-danger" href="#">[decline]</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <!-- ./friend requests -->
+
       </div>
       <div class="col-md-6">
         <!-- post form -->
         <form method="post" action="/feed/">
           {% csrf_token %}
           <div class="input-group">
-              <input class="user_id" type="text" name="user_id" placeholder="Enter user id...">
+              <input class="user_id" type="hidden" name="user_id" value={{ user_id }}>
               <input class="form-control" type="text" name="feed_text" placeholder="Make a post...">
               <span class="input-group-btn">
               <button class="btn btn-success" type="submit" name="post">Post</button>
@@ -69,7 +32,6 @@
           </div>
         </form><hr>
         <!-- ./post form -->
-
         <!-- feed -->
         <div>
           <!-- post -->
@@ -79,8 +41,8 @@
               <p>{{ post.feed_text }}</p>
             </div>
             <div class="panel-footer">
-              <span>posted {{ post.created_at }} by {{ post.user_id }}</span>
-              <span class="pull-right"><a class="text-danger" href="#">[delete]</a></span>
+              <span> posted at {{ post.created_at }} by {{ post.user_id.user_id }} </span>
+              <span class="pull-right"><a class="text-danger" href="#">[Like]</a></span>
             </div>
           </div>
             {% endfor %}
@@ -89,46 +51,8 @@
         <!-- ./feed -->
       </div>
       <div class="col-md-3">
-      <!-- add friend -->
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <h4>add friend</h4>
-            <ul>
-              <li>
-                <a href="#">alberte</a>
-                <a href="#">[add]</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <!-- ./add friend -->
-
-        <!-- friends -->
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <h4>friends</h4>
-            <ul>
-              <li>
-                <a href="#">peterpan</a>
-                <a class="text-danger" href="#">[unfriend]</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <!-- ./friends -->
       </div>
     </div>
   </main>
   <!-- ./main -->
 {% endblock %}
-{#  <!-- footer -->#}
-{#  <footer class="container text-center">#}
-{#    <ul class="nav nav-pills pull-right">#}
-{#      <li>FaceClone - Made by [your name here]</li>#}
-{#    </ul>#}
-{#  </footer>#}
-{#  <!-- ./footer -->#}
-{#  <script type="text/javascript" src="js/bootstrap.min.js"></script>#}
-{#  <script type="text/javascript" src="js/script.js"></script>#}
-{#</body>#}
-{#</html>#}
