--- a/common/templates/base.html
+++ b/common/templates/base.html
@@ -13,13 +13,15 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="index.html">Interactify</a>
+        <a class="navbar-brand" href="/feed/">Interactify</a>
       </div>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="profile.html">Profile</a></li>
-        <li><a href="#">Logout</a></li>
-      </ul>
+        {% block navlinks %}
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="/feed/">Home</a></li>
+                <li><a href="">Notifications</a></li>
+                <li><a id="logout" href="/logout/">Logout</a></li>
+              </ul>
+        {% endblock %}
     </div>
   </nav>
   <!-- ./nav -->
