--- a/chat/templates/one_on_one_chat.html
+++ b/chat/templates/one_on_one_chat.html
@@ -3,6 +3,7 @@
     Chats
 {% endblock title %}
 {% block body %}
+    <h3>Chat History</h3><br>
     <p id="chat-history"></p>
     <form id="send-message" method="post">
         {% csrf_token %}
