--- a/common/templates/base.html
+++ b/common/templates/base.html
@@ -28,7 +28,7 @@
   </nav>
   <!-- ./nav -->
 <div id="notificationDiv" style="display: none">
- hitesh
+    {# <p id="notification-div">hello</p> #}
 </div>
   <script>
   function toggle(e) {
@@ -55,6 +55,8 @@
   <!-- ./footer -->
   <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/communication.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/one_to_one_chat.js' %}"></script>
 {% block js %}{% endblock %}
 </body>
 </html>
